--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           make
           make make_cia
           mkdir -p ~/artifacts
-          cp Craftus-Next.cis ~/artifacts
+          cp Craftus-Next.cia ~/artifacts
           cp Craftus-Next.3dsx ~/artifacts
           echo ::set-output name=commit_tag::$(git describe --abbrev=0 --tags)
           echo ::set-output name=commit_hash::$(git log --format=%h -1)
