--- a/.github/workflows/3ds.yml
+++ b/.github/workflows/3ds.yml
@@ -1,4 +1,4 @@
-name: Build Craftus-Next
+name: Build Craftus-Next 3ds
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: devkitpro/toolchain-base
+    container: devkitpro/devkitarm
     name: Build with Docker using devkitARM
     outputs:
       commit_tag: ${{ steps.build.outputs.commit_tag }}
@@ -30,7 +30,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install p7zip-full -y
-          sudo dkp-pacman -S 3ds-dev 3ds-portlibs switch-dev switch-portlibs -y
           curl -L https://github.com/Steveice10/bannertool/releases/download/1.2.0/bannertool.zip -o bannertool.zip
           sudo 7z e bannertool.zip linux-x86_64/bannertool
           sudo chmod +x bannertool
@@ -44,9 +43,11 @@ jobs:
       - name: Build
         id: build
         run: |
+          cd 3ds
           make
           mkdir -p ~/artifacts
-          cp bin/* ~/artifacts
+          cp bin/Craftus-Next.3dsx ~/artifacts
+          cp bin/Craftus-Next.cia ~/artifacts
           echo ::set-output name=commit_tag::$(git describe --abbrev=0 --tags)
           echo ::set-output name=commit_hash::$(git log --format=%h -1)
           # Webhook info
