--- a/.github/workflows/3ds.yml
+++ b/.github/workflows/3ds.yml
@@ -46,8 +46,8 @@ jobs:
           cd 3ds
           make
           mkdir -p ~/artifacts
-          cp bin/Craftus-Next.3dsx ~/artifacts
-          cp bin/Craftus-Next.cia ~/artifacts
+          cp Craftus-Next.3dsx ~/artifacts
+          cp Craftus-Next.cia ~/artifacts
           echo ::set-output name=commit_tag::$(git describe --abbrev=0 --tags)
           echo ::set-output name=commit_hash::$(git log --format=%h -1)
           # Webhook info
