--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -1,123 +1,54 @@
-name: Build Craftus-Next Switch
+name: Craftus-Next
 
 on:
   push:
-    branches-ignore: [translation]
+    branches: [ main ]
   pull_request:
-    branches: ["*"]
-  release:
-    types: [created]
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: devkitpro/devkita64
-    name: Build with Docker using devkitA64
     outputs:
       commit_tag: ${{ steps.build.outputs.commit_tag }}
       commit_hash: ${{ steps.build.outputs.commit_hash }}
-      author_name: ${{ steps.build.outputs.author_name }}
-      committer_name: ${{ steps.build.outputs.committer_name }}
-      commit_subject: ${{ steps.build.outputs.commit_subject }}
-      commit_message: ${{ steps.build.outputs.commit_message }}
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Install tools
+      - uses: actions/checkout@v2
+
+      - name: set up
         run: |
-          sudo apt-get update
-          sudo apt-get install p7zip-full -y
-      - name: Build
+          sudo apt update
+          sudo apt install g++ make gcc cmake
+      - name: build
         id: build
         run: |
-          cd switch
-          make
+          #g++ nightlytool.cpp -o nightlytool
           mkdir -p ~/artifacts
-          cp Craftus-Next.nro ~/artifacts
+          #cp nightlytool ~/artifacts
           echo ::set-output name=commit_tag::$(git describe --abbrev=0 --tags)
           echo ::set-output name=commit_hash::$(git log --format=%h -1)
-          # Webhook info
-          echo ::set-output name=author_name::$(git log -1 "$GITHUB_SHA" --pretty="%aN")
-          echo ::set-output name=committer_name::$(git log -1 "$GITHUB_SHA" --pretty="%cN")
-          echo ::set-output name=commit_subject::$(git log -1 "$GITHUB_SHA" --pretty="%s")
-          echo ::set-output name=commit_message::$(git log -1 "$GITHUB_SHA" --pretty="%b")
-      - name: Publish build to GH Actions
+      - name: upload artifacts
         uses: actions/upload-artifact@v2
         with:
           path: ~/artifacts/*
-          name: build
-
-  publish_build:
-    runs-on: ubuntu-latest
-    name: Publish build to NPI-D7/nightlys
-    if: ${{ success() && !startsWith(github.ref, 'refs/pull') }}
-    needs: build
-    env:
-      COMMIT_TAG: ${{ needs.build.outputs.commit_tag }}
-      COMMIT_HASH: ${{ needs.build.outputs.commit_hash }}
-      AUTHOR_NAME: ${{ needs.build.outputs.author_name }}
-      COMMIT_MESSAGE: ${{ needs.build.outputs.commit_message }}
-    outputs:
-      current_date: ${{ steps.commit.outputs.current_date }}
+          name: ubuntu
+  windows:
+    runs-on: windows-latest
     steps:
-      - name: Install tools
+      - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-vsdevenv@master
+      - name: Build on Windows
+        shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install qrencode -y
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
+          cd Platforms/Windows
+          mkdir -p build
+          cd build
+          cmake ..
+          cmake --build
+
+      - name: "Publish build to GH Actions"
+        uses: actions/upload-artifact@v2
         with:
-          name: build
-          path: build
-      - name: Upload to ${{ github.repository }} release
-        if: ${{ startsWith(github.ref, 'refs/tags') }}
-        run: |
-          ID=$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)
-          for file in ${{ github.workspace }}/build/*; do
-            AUTH_HEADER="Authorization: token ${{ secrets.TOKEN }}"
-            CONTENT_LENGTH="Content-Length: $(stat -c%s $file)"
-            CONTENT_TYPE="Content-Type: application/7z-x-compressed"
-            UPLOAD_URL="https://uploads.github.com/repos/${{ github.repository }}/releases/$ID/assets?name=$(basename $file)"
-            curl -XPOST -H "$AUTH_HEADER" -H "$CONTENT_LENGTH" -H "$CONTENT_TYPE" --upload-file "$file" "$UPLOAD_URL"
-          done
-      - name: Commit and push to NPI-D7/nightlys
-        id: commit
-        run: |
-          CURRENT_DATE=$(date +"%Y%m%d-%H%M%S")
-          echo ::set-output name=current_date::$CURRENT_DATE
-          git config --global user.email "tobid7@outlook.de"
-          git config --global user.name "Tobi-D7"
-          git clone --depth 1 https://${{ secrets.TOKEN }}@github.com/NPI-D7/nightlys.git
-          echo hi
-          cd nightlys
-          sudo chmod +x nightlytool
-          echo running
-          #./nightlytool management/Craftus-Next.ini Craftus-Next NPI-D7 nightlys v$CURRENT_DATE $COMMIT_HASH "\\$COMMIT_SUBJECT\\$COMMIT_MESSAGE\\\\" 0 "$AUTHOR_NAME"
-          echo creating dirs
-          ls -R
-          mkdir -p builds/Craftus-Next/
-          cd builds/Craftus-Next/
-          cp ${{ github.workspace }}/build/* .
-          git stage .
-          git commit -m "Craftus-Next | $COMMIT_HASH"
-          git tag v$CURRENT_DATE
-          git push origin master v$CURRENT_DATE
-      - name: Release to idk
-        run: |
-          ls ${{ github.workspace }}/build
-          AUTH_HEADER="Authorization: token ${{ secrets.TOKEN }}"
-          CONTENT_TYPE="Content-Type: application/json"
-          API_URL="https://api.github.com/repos/NPI-D7/nightlys/releases"
-          RELEASE_INFO="{\"tag_name\": \"v${{ steps.commit.outputs.current_date }}\", \"name\": \"Craftus-Next | $COMMIT_HASH\", \"body\": \"$AUTHOR_NAME - $COMMIT_SUBJECT\\n\\n$COMMIT_MESSAGE\", \"prerelease\": true}"
-          RESPONSE=$(curl -XPOST -H "$AUTH_HEADER" -H "$CONTENT_TYPE" "$API_URL" -d "$RELEASE_INFO")
-          ID=$(echo $RESPONSE | jq --raw-output '.id')
-          for file in ${{ github.workspace }}/build/*; do
-            AUTH_HEADER="Authorization: token ${{ secrets.TOKEN }}"
-            CONTENT_LENGTH="Content-Length: $(stat -c%s $file)"
-            CONTENT_TYPE="Content-Type: application/7z-x-compressed"
-            UPLOAD_URL="https://uploads.github.com/repos/NPI-D7/nightlys/releases/$ID/assets?name=$(basename $file)"
-            curl -XPOST -H "$AUTH_HEADER" -H "$CONTENT_LENGTH" -H "$CONTENT_TYPE" --upload-file "$file" "$UPLOAD_URL"
-          done
+          path: Craftus-Next.exe
+          name: "windows"
