--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -49,7 +49,7 @@ jobs:
           mkdir -p build
           cd build
           cmake ..
-          cmake --build
+          cmake --build .
 
       - name: "Publish build to GH Actions"
         uses: actions/upload-artifact@v2
