--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CNE/external/glm"]
 	path = CNE/external/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Platforms/Windows/imgui"]
+	path = Platforms/Windows/imgui
+	url = https://github.com/ocornut/imgui.git
