--- a/.github/workflows/PC.yml
+++ b/.github/workflows/PC.yml
@@ -59,6 +59,13 @@ jobs:
 
   windows-mingw:
     runs-on: windows-latest
+    outputs:
+      commit_tag: ${{ steps.build.outputs.commit_tag }}
+      commit_hash: ${{ steps.build.outputs.commit_hash }}
+      author_name: ${{ steps.build.outputs.author_name }}
+      committer_name: ${{ steps.build.outputs.committer_name }}
+      commit_subject: ${{ steps.build.outputs.commit_subject }}
+      commit_message: ${{ steps.build.outputs.commit_message }}
     steps:
       - name: Check
         uses: actions/checkout@v2
@@ -67,13 +74,7 @@ jobs:
       - name: Install MinGW
         uses: egor-tensin/setup-mingw@v2
       - name: Build on Windows
-        outputs:
-        commit_tag: ${{ steps.build.outputs.commit_tag }}
-        commit_hash: ${{ steps.build.outputs.commit_hash }}
-        author_name: ${{ steps.build.outputs.author_name }}
-        committer_name: ${{ steps.build.outputs.committer_name }}
-        commit_subject: ${{ steps.build.outputs.commit_subject }}
-        commit_message: ${{ steps.build.outputs.commit_message }}
+          
         shell: bash
         run: |
           cd Platforms/Windows
@@ -99,7 +100,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Publish build to Tobi-D7/Craftus-Nightlys
     if: ${{ success() && !startsWith(github.ref, 'refs/pull') }}
-    needs: build
+    needs: windows-mingw
     env:
       COMMIT_TAG: ${{ needs.build.outputs.commit_tag }}
       COMMIT_HASH: ${{ needs.build.outputs.commit_hash }}
@@ -115,7 +116,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: build
+          name: windows-mingw
           path: build
       - name: Upload to ${{ github.repository }} release
         if: ${{ startsWith(github.ref, 'refs/tags') }}
