--- a/.github/workflows/PC.yml
+++ b/.github/workflows/PC.yml
@@ -150,7 +150,7 @@ jobs:
           git stage .
           git commit -m "Craftus-Next | $COMMIT_HASH"
           git tag v$CURRENT_DATE
-          git push origin master v$CURRENT_DATE
+          git push origin main v$CURRENT_DATE
       - name: Release to idk
         run: |
           ls ${{ github.workspace }}/build
