--- a/Platforms/Windows/CMakeLists.txt
+++ b/Platforms/Windows/CMakeLists.txt
@@ -2,42 +2,12 @@ cmake_minimum_required( VERSION 3.1 )
 
 project( Craftus-Next LANGUAGES C CXX )
 
-include_directories( src ../../CNE/external/OpenGL/include/ ../../CNE/external/ ../../CNE/ ../../CNE/driver/def ../../CNE/driver/ogl ../../CNE/Graphics glfw glm imgui)
+include_directories( src ../../CNE/external/OpenGL/include/ ../../CNE/external/ ../../CNE/ ../../CNE/driver/def ../../CNE/driver/ogl ../../CNE/Graphics sfml-system sfml-graphics sfml-window glm )
 
-set( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
-set( GLFW_INSTALL OFF CACHE BOOL  "GLFW lib only" )
 
-add_subdirectory( glfw )
+add_subdirectory( SFML )
 add_subdirectory( ../../CNE/external/glm/ glm)
 add_library(glad "../../CNE/external/OpenGL/include/glad/glad.h" "../../CNE/external/OpenGL/src/glad.c")
-
-
-#=================== IMGUI ===================
-
-set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/imgui)
-add_library(imgui STATIC)
-
-target_sources( imgui
-                PRIVATE
-                    ${IMGUI_DIR}/imgui_demo.cpp
-                    ${IMGUI_DIR}/imgui_draw.cpp
-                    ${IMGUI_DIR}/imgui_tables.cpp
-                    ${IMGUI_DIR}/imgui_widgets.cpp
-                    ${IMGUI_DIR}/imgui.cpp
-
-                PRIVATE
-                    ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
-                    ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
-                )
-
-target_include_directories( imgui
-                            PUBLIC ${IMGUI_DIR}
-                            PUBLIC ${IMGUI_DIR}/backends
-                            PUBLIC ${SDL2_DIR}/include
-                            )
-
-
-target_link_libraries(imgui PUBLIC glfw ${CMAKE_DL_LIBS})
 
 set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/icon.rc")
 
@@ -60,7 +30,7 @@ set( Craftus-Next-SRC
      )
      
 add_executable( Craftus-Next WIN32 ${Craftus-Next-SRC} )
-target_link_libraries( Craftus-Next glfw glad glm imgui)
+target_link_libraries( Craftus-Next sfml-window sfml-graphics sfml-system glad glm )
 if( MSVC )
     if(${CMAKE_VERSION} VERSION_LESS "3.6.0") 
         message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'Craftus-Next' as StartUp Project in Visual Studio.\n" )
