--- a/.github/workflows/PC.yml
+++ b/.github/workflows/PC.yml
@@ -82,6 +82,7 @@ jobs:
           cd build
           cmake .. -G "MinGW Makefiles"
           cmake --build .
+          cd ..
           make
           echo ::set-output name=commit_tag::$(git describe --abbrev=0 --tags)
           echo ::set-output name=commit_hash::$(git log --format=%h -1)
@@ -94,7 +95,7 @@ jobs:
       - name: "Publish build to GH Actions"
         uses: actions/upload-artifact@v2
         with:
-          path: Platforms/Windows/build/bin/*
+          path: Platforms/Windows/build.zip
           name: "windows-mingw"
 
   publish_build:
