--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CNE/external/glm"]
 	path = CNE/external/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Platforms/Windows/GLFW3"]
+	path = Platforms/Windows/GLFW3
+	url = https://github.com/glfw/glfw.git
