--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 *.nacp
 switch/build/*
 .vscode/*
-Platforms/Windows/build
-Platforms/Windows/buildmsvc
+Platforms/Windows/build/*
+Platforms/Windows/buildmsvc/*
 Platforms/Windows/*.exe
 CNE/external/glm
+build/
