--- a/Platforms/Windows/CMakeLists.txt
+++ b/Platforms/Windows/CMakeLists.txt
@@ -2,13 +2,14 @@ cmake_minimum_required( VERSION 3.1 )
 
 project( Craftus-Next LANGUAGES C CXX )
 
-include_directories( src glad ../../CNE/external/ ../../CNE/ ../../CNE/driver/def ../../CNE/driver/ogl ../../CNE/Graphics ../../CNE/Graphics/API glm glfw)
+include_directories( src glad ../../CNE/external/ ../../CNE/ ../../CNE/driver/def ../../CNE/driver/ogl ../../CNE/driver/vulkan ../../CNE/Graphics ../../CNE/Graphics/API glm glfw)
 
 set( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
 set( GLFW_INSTALL OFF CACHE BOOL  "GLFW lib only" )
 add_subdirectory( ../../CNE/external/glm/ glm)
 add_subdirectory(GLFW3)
 add_subdirectory( ../../CNE/external/OpenGL/ glad)
+add_subdirectory( ../../CNE/external/vk/ vulkan)
 
 set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/icon.rc")
 
@@ -26,18 +27,18 @@ set( Craftus-Next-SRC
     ../../CNE/driver/ogl/OpenGL_Renderer.cpp
     ../../CNE/Graphics/Color.cpp
     ../../CNE/Graphics/API/API.cpp
-    #../../CNE/Graphics/API/Renderer.cpp
+    ../../CNE/driver/vulkan/VK_Renderer.cpp
     ../../CNE/driver/ogl/OpenGL_Shader.cpp
     ../../CNE/driver/ogl/OpenGL_Texture.cpp
     ../../CNE/driver/ogl/OpenGL_2DBatch.cpp
-    ../../CNE/driver/ogl/Camera.cpp
+    #../../CNE/driver/ogl/Camera.cpp
     #src/stb_image.h
     ${APP_ICON_RESOURCE_WINDOWS}
     )
      
 add_executable(Craftus-Next WIN32 ${Craftus-Next-SRC} )
 
-target_link_libraries( Craftus-Next glad glm glfw)
+target_link_libraries( Craftus-Next glad vulkan glm glfw)
 if( MSVC )
     if(${CMAKE_VERSION} VERSION_LESS "3.6.0") 
         message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'Craftus-Next' as StartUp Project in Visual Studio.\n" )
