Work a bit at the 3ds Version and Fix some Problems with linux

--- a/Platforms/3ds/CMakeLists.txt
+++ b/Platforms/3ds/CMakeLists.txt
@@ -4,10 +4,13 @@ project(CraftusNext)
 
 enable_language(ASM)
 
+set(BASE_CTR ON CACHE BOOL "Enable 3ds")
+add_subdirectory(../../base base)
+
 add_executable(${PROJECT_NAME} src/main.cpp)
 
-#target_include_directories(${PROJECT_NAME} PRIVATE ${CTRUL})
+target_include_directories(${PROJECT_NAME} PRIVATE src base)
 
-target_link_libraries(${PROJECT_NAME} ctru m)
+target_link_libraries(${PROJECT_NAME} citro2d citro3d ctru m base)
 
 ctr_create_3dsx(${PROJECT_NAME})
