--- a/Platforms/Desktop/CMakeLists.txt
+++ b/Platforms/Desktop/CMakeLists.txt
@@ -2,11 +2,16 @@ cmake_minimum_required(VERSION 3.22)
 
 project(CraftusNext)
 
-#set(BASE_DESKTOP CACHE BOOL ON)
+set(BASE_DESKTOP ON CACHE BOOL "Enable Desktop")
 
 set(ICON_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/icon.rc")
 
-set(CMAKE_CXX_STANDARD_LIBRARIES "-static -static-libgcc -static-libstdc++ ${CMAKE_CXX_STANDARD_LIBRARIES}")
+if (UNIX)
+    set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ ${CMAKE_CXX_STANDARD_LIBRARIES}")
+else()
+    set(CMAKE_CXX_STANDARD_LIBRARIES "-static -ldl -static-libgcc -static-libstdc++ ${CMAKE_CXX_STANDARD_LIBRARIES}")
+endif()
+
 
 #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -Wl,--no-whole-archive -Wl,--no-as-needed -ldl")
 
