--- a/Platforms/3ds/CMakeLists.txt
+++ b/Platforms/3ds/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.22)
 
 project(CraftusNext)
 
+set(SMDH_TITLE "Craftus-Next")
+set(SMDH_DESCRIPTION "Minecraft Clone for 3ds")
+set(SMDH_AUTHOR "tobid7vx")
+
 enable_language(ASM)
 
 set(BASE_CTR ON CACHE BOOL "Enable 3ds")
@@ -13,4 +17,5 @@ target_include_directories(${PROJECT_NAME} PRIVATE src base)
 
 target_link_libraries(${PROJECT_NAME} citro2d citro3d ctru m base)
 
+ctr_generate_smdh("Craftus-Next" "Minecraft Clone for 3ds!" "tobid7vx")
 ctr_create_3dsx(${PROJECT_NAME})
