Test for o3ds and Some New Stuff for Base Engine

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,8 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "gamestates.h": "c"
     },
     "cmake.configureOnOpen": false,
     "cmake.sourceDirectory": "${workspaceFolder}/Platforms/Windows"
